# miniJVM

desktop/SDL2/c/: CMakeLists.txt  jni_sdl2.c  media.c  media.h
desktop/SDL2/c/depends/lib/win_x64/cmake/SDL2/: SDL2staticTargets.cmake
desktop/SDL2/c/depends/lib/win_x64/pkgconfig/: sdl2.pc
desktop/SDL2/java/: pom.xml
desktop/SDL2/java/src/main/java/org/mini/SDL2/: MirImage.java  MirLib.java  SDL2.java
desktop/SDL2/java/src/main/java/org/mini/SDL2/constcode/: SDLBlendMode.java  SDLEventType.java  SDLKeyCode.java  SDLRendererFlags.java  SDLWindowFlags.java  SdlSubSystemConst.java
desktop/SDL2/java/src/main/java/org/mini/SDL2/util/: BinaryReader.java  BinaryWriter.java
desktop/glfw_gui/c/: jni_nanovg.c  media.c
desktop/glfw_gui/java/: pom.xml
desktop/glfw_gui/java/src/main/java/org/mini/nanovg/: Nanovg.java
extlib/xgui/: pom.xml
extlib/xgui/src/main/java/org/mini/glfw/: GlfwMain.java
minijvm/c/: main.c
minijvm/c/jvm/: jni_io.c  os_posix.c  os_win.c
minijvm/java/src/main/java/java/beans/: EventHandler.java
mobile/java/ExMir/: pom.xml
mobile/java/ExMir/src/main/java/test/: MirTest.java  MyMir.java  TrueTypeFont.java
mobile/java/ExMir/src/main/java/test/ext/: SimplePanel.java
mobile/java/ExMir/src/main/java/test/kindred/: MirTestBright.java  MirTestColor.java  MirTestColorAndFont.java  MirTestNormal.java  TrueTypeFont.java  TrueTypeFont2.java
mobile/java/ExMir/src/main/resource/: config.txt
